feat: add React Query for caching and auto-refresh

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:headed": "playwright test --headed"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
